[package]
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2018"
name = "figclock"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
chrono = "0.4.19"
crossterm = "0.18.2"
dirs = "3.0.1"
figlet-rs = "0.1.3"
once_cell = "1.5.2"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "0.2.24", features = ["macros", "time"] }
toml = "0.5.7"
