[package]
name = "tmod"
version = "0.1.0"
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = { version = "^2.33", features = ["yaml"] }
itertools = "0.9.0"
buf-rand = "0.1.2"
